tag bootstrap issue on smaller screens

--- a/src/app/projects/projects.component.css
+++ b/src/app/projects/projects.component.css
@@ -21,6 +21,10 @@ div.btn-group {
   margin-top: 5px;
 }
 
+div.btn-group input {
+  display:none;
+}
+
 div.btn-group label {
   margin-right:5px;
 }
